Fixed CSS bug on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ section {
 	display: block;
     text-align: center;
     font-size: 15px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
     color: #ffffff;
     text-decoration: none;
     font-family: 'Open Sans', sans-serif;
